# ifl-haskell

./: LICENSE.md  Makefile  README.md  README.org  Setup.hs  default.nix  ifl-haskell.cabal  shell.nix
doc/: Core.md  pipeline.md
doc/Core/: operators.md  syntax.md
src/: Tests.hs
src/Core/: Language.hs  PPrinter.hs  Parser.hs
src/Core/PPrinter/: Tests.hs
src/Core/Parser/: Tests.hs
