name:                ifl-haskell
version:             0.1.0.0
synopsis:            "Implementing Functional Languages: a tutorial" in Haskell
homepage:            https://github.com/nkaretnikov/ifl-haskell
license:             PublicDomain
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Core.PPrinter, Core.Language, Core.Parser
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tests
  main-is:             Tests.hs
  build-depends:       base >=4.6 && <4.7, HUnit >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
