name:                ifl-haskell
version:             0.1.0.0
synopsis:            "Implementing Functional Languages: a tutorial" in Haskell
homepage:            https://github.com/nkaretnikov/ifl-haskell
license:             PublicDomain
license-file:        LICENSE.md
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Core.PPrinter
                     , Core.Language
                     , Core.Parser
  build-depends:       base >=4.6 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tests
  main-is:             Tests.hs
  other-modules:       Core.Language
                     , Core.PPrinter
                     , Core.PPrinter.Tests
                     , Core.Parser
                     , Core.Parser.Tests

  build-depends:       base >=4.6 && <4.12, HUnit >=1.2 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
